[gd_scene load_steps=14 format=3 uid="uid://c02r5nbesb0a7"]

[ext_resource type="Script" uid="uid://dywxcg62s63ft" path="res://Controllers/Managers/Settings/settings_manager.gd" id="1_62qfm"]
[ext_resource type="Texture2D" uid="uid://boyhxqkm8r4x0" path="res://Resources/Art/background-tileable.png" id="2_vp4hl"]
[ext_resource type="FontFile" uid="uid://of04w1utycqm" path="res://Imports/Oswald-VariableFont_wght.ttf" id="3_fvuku"]
[ext_resource type="Script" uid="uid://cpe8wnxypaxl5" path="res://Controllers/Managers/Main Menu/grab_focus.gd" id="7_i3aig"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7hc8y"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_3blup"]
sky_material = SubResource("ProceduralSkyMaterial_7hc8y")

[sub_resource type="Environment" id="Environment_1gsrk"]
background_mode = 1
background_color = Color(0.048162833, 0.024220886, 0.5564546, 1)
sky = SubResource("Sky_3blup")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ewo4"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4nkfa"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4vamj"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6abt8"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dbtm4"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_of63d"]
bg_color = Color(0.48665255, 0.48631382, 0.556868, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Settings" type="Node3D"]
script = ExtResource("1_62qfm")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1gsrk")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 0)

[node name="Background" type="Node3D" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="Background"]
transform = Transform3D(1.425, 0, 0, 0, 1.425, 0, 0, 0, 1.425, 4.5, -0.275, 5.614)
texture = ExtResource("2_vp4hl")

[node name="Sprite3D2" type="Sprite3D" parent="Background"]
transform = Transform3D(1.425, 0, 0, 0, 1.425, 0, 0, 0, 1.425, -4.5, -0.275, 5.614)
texture = ExtResource("2_vp4hl")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -65.0
offset_right = 137.0
offset_bottom = -20.0
grow_vertical = 0
focus_neighbor_bottom = NodePath("../LevelSelect")
focus_next = NodePath("../LevelSelect")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 0.76862746, 0, 1)
theme_override_colors/font_pressed_color = Color(0.7137255, 0.54509807, 0, 1)
theme_override_colors/font_hover_color = Color(0.82937205, 0.63541985, 1.92523e-06, 1)
theme_override_fonts/font = ExtResource("3_fvuku")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_1ewo4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4nkfa")
theme_override_styles/hover = SubResource("StyleBoxFlat_4vamj")
theme_override_styles/focus = SubResource("StyleBoxFlat_6abt8")
text = "‚Üê Back"
alignment = 0

[node name="MarginContainer" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -169.9725
offset_right = 122.0
offset_bottom = 169.9725
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control/MarginContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dbtm4")

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fvuku")
theme_override_font_sizes/font_size = 50
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UseTimer" type="CheckBox" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fvuku")
text = "Visible Timer"
script = ExtResource("7_i3aig")

[node name="Panel" type="Panel" parent="Control/MarginContainer/MarginContainer/VBoxContainer/UseTimer"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -9.5
offset_right = 21.0
offset_bottom = 8.5
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_of63d")

[node name="Label2" type="Label" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fvuku")
text = "Master Volume"

[node name="MasterVolume" type="HSlider" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.1
value = 1.0

[node name="Label3" type="Label" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fvuku")
text = "Music Volume"

[node name="MusicVolume" type="HSlider" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.1
value = 1.0

[node name="Label4" type="Label" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fvuku")
text = "SFX Volume"

[node name="SFXVolume" type="HSlider" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.1
value = 1.0

[node name="ResetSaveData" type="Button" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_fvuku")
theme_override_font_sizes/font_size = 31
text = "Reset Save Data"

[connection signal="button_up" from="Control/Back" to="." method="_on_back_button_up"]
[connection signal="button_up" from="Control/MarginContainer/MarginContainer/VBoxContainer/UseTimer" to="." method="_on_use_timer_button_up"]
[connection signal="drag_ended" from="Control/MarginContainer/MarginContainer/VBoxContainer/MasterVolume" to="." method="_on_master_volume_drag_ended"]
[connection signal="drag_ended" from="Control/MarginContainer/MarginContainer/VBoxContainer/MusicVolume" to="." method="_on_music_volume_drag_ended"]
[connection signal="drag_ended" from="Control/MarginContainer/MarginContainer/VBoxContainer/SFXVolume" to="." method="_on_sfx_volume_drag_ended"]
[connection signal="button_up" from="Control/MarginContainer/MarginContainer/VBoxContainer/ResetSaveData" to="." method="_on_reset_save_data_button_up"]
